--- a/design-thinking/practica6.html
+++ b/design-thinking/practica6.html
@@ -55,19 +55,63 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/oBobof9Q0Ps" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <div class="think__details__extra">
+                    <p class="think__details__extra__title">DESCOMPOSICION FUNCIONAL DE LA SOLUCION</p>
+                    <p class="think__details__extra__title">El Carrito de Compras</p>
+                    <p>Esta es la herramienta de trabajo de muchas empresas dedicadas a la venta de productos, esta herramienta se ve involucrada en un problema con su mal uso por parte de algunos usuarios.</p>
+                    <img src="../img/BOSQUEJOCARRO.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1BjrA-7AXLN4P-UCFc-BTyvXcXD5bfFs6" target="_blank" class="think__details__extra__description">Documento - El Carrito de Compras</a>
+                    <p class="think__details__extra__title">La Rueda del Carrito</p>
+                    <p>Brindara movilidad al carrito de compras y acompañado de unos ejes giratorios lo hara mas facil y como de usar.</p>
+                    <img src="../img/BOSQUEJO RUEDA.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1vRqUYrLnRs2tGY5ozgO7KwvtC8onngey" target="_blank" class="think__details__extra__description">Documento - La Rueda del Carrito</a>
+                    <p class="think__details__extra__title">Sistema de Freno para Carrito</p>
+                    <p>Este sistema de freno para carritos de supermercados se encontrara ubicado en una de las ruedas y sera activado luego de sobrepasar o superar una cierta distancia segun su configuracion.</p>
+                    <img src="../img/BOSQUE1.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1A4JYm4TnGmxMEwhlVDXKNoXI3l3DRRKi" target="_blank" class="think__details__extra__description">Documento - Sistema de Freno para Carrito</a>
+                    <p class="think__details__extra__title">Bastidor del Eje</p>
+                    <p>Esta parte del carrito sera el que mantenga sujeto las ruedas y tambien brinde la facilidad de hacer giros o cualquier otra maniobra, permitiendo asi que el usuario pueda realizar sus compras comodamente.</p>
+                    <img src="../img/BOSQUE2.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1Z82z7XJbAgqeKL3-illVaQNQoAtpkorx" target="_blank" class="think__details__extra__description">Documento - Bastidor del Eje</a>
+                    <p class="think__details__extra__title">Dispositivo GPS</p>
+                    <p>Este dispositivo GPS se percatara cuando el carro de compras salga fuera del limite, activando asi los siguientes componentes encargados del frenado y esta sera alimentada con 5V</p>
+                    <img src="../img/BOSQUEJO3.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1GGwTtjSgxwB_9pTQ-aLOh_D2G4c5UTG4" target="_blank" class="think__details__extra__description">Documento - Dispositivo GPS</a>
+                    <p class="think__details__extra__title">Cubierta del Freno</p>
+                    <p>La cubierta del freno mantendra seguro el dispositivo de freno y tambien a su vez el dispositivo GPS; esta parte protegera cada componente del carro ante cualquier focejeo.</p>
+                    <img src="../img/BOSQUEJO4.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1f7BH70OC_j811yybFPzAA4o9hVSgEsJP" target="_blank" class="think__details__extra__description">Documento - Cubierta del Freno</a>
+                    <p class="think__details__extra__title">Bloqueo de Rueda</p>
+                    <p>Este pequeño dispositivo nos servira para bloquear la rueda luego de que el GPS envio la señal al sobrepasar el limite.</p>
+                    <img src="../img/BOSQUEJO5.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1ZXUZQMC6k-CtARc8FVi1U47HmZz1cSyy" target="_blank" class="think__details__extra__description">Documento - Bloqueo de Rueda</a>
+                    <p class="think__details__extra__title">Tuerca de Eje</p>
+                    <p>Esta tuerca de 16 pulgadas mantendra sujeto la rueda al bastidor y tambien el dispositivo de frenado de la rueda misma.</p>
+                    <img src="../img/BOSQUEJO6.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=13pRwFuRarD0DGCCUKktKNSJL5Mkn38Uj" target="_blank" class="think__details__extra__description">Documento - Tuerca de Eje</a>
+                </div>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Título</p>
-                    <p class="think__details__info__cont">En Desarrollo</p>
+                    <p class="think__details__info__title">DESCOMPOSICION FUNCIONAL DE LA SOLUCION</p>
+                    <p class="think__details__info__cont">Para el primer paso hemos realizado entrevistas en los lugares donde se presentan estos problemas.</p>
+                    <p>*Nuestro entrevistado fue el encargado de organizar los carritos de compras, puesto que el es el testigo mas claro; nos comento sobre como el mal uso de carritos causaba problemas no solo a la empresa sino a tambien a los transeuntes.</p>
+                    <p class="think__details__info__cont">Para el segundo paso el grupo brindo todas la ideas que podrian dar solucion a este problema y se debatieron para mejorarlas.</p>
+                    <p>*Si bien la implementacion de señales que indiquen o adviertan el uso de los carritos no seria muy bien captada por los compradores, una de las mjores soluciones era implementar un sistema de frenos en un grupo de carritos, para ver la reaccion de los usuarios y asi realizar mas mejoras.</p>
+                    <p>Aqui brindaremos los costos de las partes mas importantes de nuestra propuesta; para ello detallaremos el precio del carrito, el dispositivo gps y los sistemas de frenados.</p>
+                    <p>Carrito de Supermercado  ………………… S/. 139.00</p>
+                    <p>Dispositivo GPS ………………………………….. S/. 38.00</p>
+                    <p>Pastillas de Freno ………………………………. S/. 35.00</p>
+                    <p class="think__details__info__title">DIAGRAMA DE GANTT</p>
+                    <img src="../img/GANTT.jpg" alt="">
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo </p>
+                    <p class="think__details__extra__title">El Carrito de Compras</p>
+                    <p>Esta es la herramienta de trabajo de muchas empresas dedicadas a la venta de productos, esta herramienta se ve involucrada en un problema con su mal uso por parte de algunos usuarios.</p>
                     <a href="https://drive.google.com/file/d/1TmrF-JHLkRz-yMFOVZ_WixS0xNnwRbQA/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Fabricación Digital</a>
                 </div>
                 <div class="think__details__extra">
