--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -56,6 +56,14 @@
         <div class="think">
             <div class="think__img">
                  <img src="../img/FuncionamientoLaser.jpg" alt="">
+            <div class="think__details__extra">
+                    <p class="think__details__extra__title">MEJORAS DEL PRODUCTO</p>
+                    <p class="think__details__extra__title">Empaquetado del Producto</p>
+                    <p>Se realizo un dieño de empaqueda facil de usar y con una descipcion clara de lo que este contiene.</p>
+                    <img src="../img/Tapa1.jpg" alt="">
+                    <img src="../img/Tapa2.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1cSDOyy3yoHmdaNIA-9bAWLKVR5ovGQrT" target="_blank" class="think__details__extra__description">Documento - Diseño de Caja</a>
+                </div>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
