--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -84,6 +84,7 @@
                     <p class="think__details__info__title">ENFOCAR EL PROBLEMA</p>
                     <p class="think__details__info__cont"> La insatisfacción en los usuarios de estos establecimientos como, por ejemplo, de que una persona al llegar y estar dentro del supermercado, pero al verse en la necesidad de tomar un carrito para compras mayores, pero estos están ahí botados por los estacionamientos lo cual le impide contar con uno y estar esperando que alguno lo desocupe.</p>
                     <IMG src="../img/IMG-20180415-WA0016.jpg" width="380" height="550"/>
+                    <img src="../img/ISHIKAWA.jpg" alt="">
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">INSIGHT DEL USUARIOS, CLIENTE O CONSUMIDOR</p>
