--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -63,21 +63,29 @@
                     <img src="../img/Tapa1.jpg" alt="">
                     <img src="../img/Tapa2.jpg" alt="">
                     <a href="https://drive.google.com/open?id=1cSDOyy3yoHmdaNIA-9bAWLKVR5ovGQrT" target="_blank" class="think__details__extra__description">Documento - Diseño de Caja</a>
+                    <img src="../img/LOGOATRAS.jpg" alt="">
                 </div>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-settings-streamline"></i>
                 </div>
+                
                 <div class="think__details__info">
+                    <p class="think__details__info__title">PROPUESTa DE LA PRESENTACION FINAL</p>
+                    <p class="think__details__extra__title">Nuestro producto ya terminado sera bien acogido por el publico tanto juvenil como adulto; con esto el publico podra disfrutar de un producto ideal para decorar momentos unicos en durante el dia a dia.</p>
+                    <img src="../img/calavera.jpg" alt="">
                     <p class="think__details__info__title">GUIA DE USUARIO</p>
                     <p class="think__details__extra__title">COMPONENTES</p>
                     <p class="think__details__extra__description">Base con Luces LED</p>
                     <p class="think__details__extra__description">Imagen de Acrilico</p>
                     <p class="think__details__extra__description">Fuente de Alimentacion</p>
                     <p class="think__details__extra__description">Guia de Usuario</p>
+                    <p>Aqui podremos detallar las caracteristicas de nuestro producto y el como utilizar correctamente cada componente; como tambien sus advertencias.</p>
+                    <img src="../img/GUIA1.jpg" alt="">
+                    <img src="../img/GUIA2.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1rkKU_brGXPUDQSAsKd04_D8gOnhl1VZv" target="_blank" class="think__details__extra__description">Documento - GUIA BASICA DE USUARIO</a>
                 </div>
-                <div class="think__details__info">
                     <p class="think__details__info__title">PRECAUCIONES Y ADVERTENCIAS</p>
                     <p class="think__details__extra__title">Extraer la imagen en acrilico con cuido sin realizar acciones bruscas para evitar que esta se dañe o presente ralladuras.</p>
                     <p class="think__details__extra__title">Al colocar la imagen de acrílico con mucho cuidado a la base de luces led</p>
@@ -86,6 +94,9 @@
                     <p class="think__details__extra__title">Debe ser desenergizado la lámpara cuando se deje de usar para evitar el uso prologando de los leds. No debe dejarse enchufado todo el día. No abrir la base de luces led.</p>
                     <p class="think__details__info__title">Nota</p>
                     <p class="think__details__extra__title">Se recomienda la supervisión de un adulto en el caso de que un niño lo valla a usa.Los usuarios deberán conservar esta información para referencia futura. Los usuarios deben observar un estricto cumplimiento del manual de instrucciones mientras se está operando el producto.</p>
+                    <p class="think__details__info__title">DISEÑO DEL LOGO</p>
+                    <p class="think__details__extra__title">Aqui presentaremos el diseño de nuestro logo y marca con su respetivo lema; el cual esta dedicado al objetivo de neustro producto.</p>
+                    <img src="../img/LOGOLAMP.jpg" alt="">
                 </div>
                 
             </div>
