--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -55,7 +55,6 @@
 
         <div class="think">
             <div class="think__img">
-		 <iframe width="560" height="315" src="https://www.youtube.com/embed/dMs8jeWuYUY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                  <img src="../img/FuncionamientoLaser.jpg" alt="">
             <div class="think__details__extra">
                     <p class="think__details__extra__title">MEJORAS DEL PRODUCTO</p>
@@ -73,28 +72,28 @@
                 </div>
                 
                 <div class="think__details__info">
-                    <p class="think__details__info__title">PROPUESTa DE LA PRESENTACION FINAL</p>
-                    <p class="think__details__extra__title">Nuestro producto ya terminado sera bien acogido por el publico tanto juvenil como adulto; con esto el publico podra disfrutar de un producto ideal para decorar momentos unicos en durante el dia a dia.</p>
-                    <img src="../img/calavera.jpg" alt="">
+                    <p class="think__details__info__title">PROPUESTA DE LA PRESENTACIÓN FINAL</p>
+                    <p class="think__details__extra__title">Nuestro producto una vez finalizado su proceso de desarrollo estará dedicado al público en general; pues, gracias a un producto como el nuestro podrá disfrutar de un producto ideal para decorar momentos únicos en durante el día a día.</p>
+                    <img src="../img/FINAL.jpg" alt="">
                     <p class="think__details__info__title">GUIA DE USUARIO</p>
                     <p class="think__details__extra__title">COMPONENTES</p>
                     <p class="think__details__extra__description">Base con Luces LED</p>
-                    <p class="think__details__extra__description">Imagen de Acrilico</p>
-                    <p class="think__details__extra__description">Fuente de Alimentacion</p>
-                    <p class="think__details__extra__description">Guia de Usuario</p>
-                    <p>Aqui podremos detallar las caracteristicas de nuestro producto y el como utilizar correctamente cada componente; como tambien sus advertencias.</p>
+                    <p class="think__details__extra__description">Imagen de Acrílico</p>
+                    <p class="think__details__extra__description">Fuente de Alimentación</p>
+                    <p class="think__details__extra__description">Guía de Usuario</p>
+                    <p>Aquí podremos detallar las características de nuestro producto y el cómo utilizar correctamente cada componente; como también sus advertencias.</p>
                     <img src="../img/GUIA1.jpg" alt="">
                     <img src="../img/GUIA2.jpg" alt="">
-                    <a href="https://drive.google.com/open?id=1rkKU_brGXPUDQSAsKd04_D8gOnhl1VZv" target="_blank" class="think__details__extra__description">Documento - GUIA BASICA DE USUARIO</a>
+                    <a href="https://drive.google.com/open?id=1rkKU_brGXPUDQSAsKd04_D8gOnhl1VZv" target="_blank" class="think__details__extra__description">Documento - GUÍA BASICA DE USUARIO</a>
                 </div>
                     <p class="think__details__info__title">PRECAUCIONES Y ADVERTENCIAS</p>
-                    <p class="think__details__extra__title">Extraer la imagen en acrilico con cuido sin realizar acciones bruscas para evitar que esta se dañe o presente ralladuras.</p>
+                    <p class="think__details__extra__title">Extraer la imagen en acrílico con cuido sin realizar acciones bruscas para evitar que esta se dañe o presente ralladuras.</p>
                     <p class="think__details__extra__title">Al colocar la imagen de acrílico con mucho cuidado a la base de luces led</p>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Precauciones</p>
                     <p class="think__details__extra__title">Debe ser desenergizado la lámpara cuando se deje de usar para evitar el uso prologando de los leds. No debe dejarse enchufado todo el día. No abrir la base de luces led.</p>
                     <p class="think__details__info__title">Nota</p>
-                    <p class="think__details__extra__title">Se recomienda la supervisión de un adulto en el caso de que un niño lo valla a usa.Los usuarios deberán conservar esta información para referencia futura. Los usuarios deben observar un estricto cumplimiento del manual de instrucciones mientras se está operando el producto.</p>
+                    <p class="think__details__extra__title">Se recomienda la supervisión de un adulto en el caso de que un niño lo valla a usa. Los usuarios deberán conservar esta información para referencia futura. Los usuarios deben observar un estricto cumplimiento del manual de instrucciones mientras se está operando el producto.</p>
                     <p class="think__details__info__title">DISEÑO DEL LOGO</p>
                     <p class="think__details__extra__title">Aqui presentaremos el diseño de nuestro logo y marca con su respetivo lema; el cual esta dedicado al objetivo de neustro producto.</p>
                     <img src="../img/LOGOLAMP.jpg" alt="">
