--- a/proyecto-final/semana5.html
+++ b/proyecto-final/semana5.html
@@ -48,28 +48,35 @@
             <div class="think__title__text">
                 <h1>Desarrollo de la Presentación Final</h1>
             </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+            <div class="think__title__content">
+                <p>Aquí presentaremos la finalización de nuestro producto y sus mejoras; también, se presentara el video Slide del proceso de construcción, una breve explicación y el video publicitando nuestro producto.</p>
+            </div>
         </div>
 
         <div class="think">
             <div class="think__img">
-                    <iframe width="560" height="315" src="https://www.youtube.com" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1F2oaovJ5NU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <div class="think__details__extra">
+                    <p class="think__details__extra__title">Diseños de Logo y Banner</p>
+                    <p class="think__details__extra__title">Logo</p>
+                    <p>SELED - Colores Que Iluminan</p>
+                    <img src="../img/SELED.png" alt="">
+                    <p class="think__details__extra__title">Banner</p>
+                    <img src="../img/banner.jpg" alt="">
+                </div>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Titulo</p>
-                    <p class="think__details__info__cont">En Desarrollo.</p>
-                </div>
-
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p class="think__details__extra__description">En Desarrollo.</p>
-                    <a href="https://drive.google.com/file/d/1QgpgGu5F5JczXJwdXB2NKXQi1G5aTCdd/view?usp=sharing" target="_blank">Documento - Implementación y Funcionamiento al 100%</a>
+                    <p class="think__details__info__title">PRESENTACION FINAL</p>
+                    <p class="think__details__info__cont">Funcionamiento del producto</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1F2oaovJ5NU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <p class="think__details__info__cont">Video de secuencia de fotos de la fabricación digital</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zjDgbDc1xoE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <p class="think__details__info__cont">Video Funcionamiento</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/l3jFY5ss_yI?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
