--- a/design-thinking/practica5.html
+++ b/design-thinking/practica5.html
@@ -90,6 +90,18 @@
                     <p>Esta tuerca de 16 pulgadas mantendra sujeto la rueda al bastidor y tambien el dispositivo de frenado de la rueda misma.</p>
                     <img src="../img/BOSQUEJO6.jpg" alt="">
                     <a href="https://drive.google.com/open?id=13pRwFuRarD0DGCCUKktKNSJL5Mkn38Uj" target="_blank" class="think__details__extra__description">Documento - Tuerca de Eje</a>
+                    <p class="think__details__extra__title">Freno de Pastillas</p>
+                    <p>Aquí podemos apreciar la composición del sistema de frenado, el cual se activa luego de que el GPS recopilo la información al sobrepasar la distancia asignada, los frenos activan unas pastillas que realizan presión sobre la rueda e impiden que esta continue girando.</p>
+                    <img src="../img/FRENOP.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=1Vja9jsB8pBi4XY06r_uauPrQaq1EKgCn" target="_blank" class="think__details__extra__description">Documento - Freno de Pastillas</a>
+                    <p class="think__details__extra__title">Circuito GPS</p>
+                    <p>Aquí notamos de manera detallada lo que sería el circuito dentro del GPS, el cual hace posible el correcto funcionamiento del freno ya que así podremos tener un mejor control del carritos evitando que salga de zonas designadas.</p>
+                    <img src="../img/GPSB.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=12y31FUFvWwk6Nt_dm3FhO5woSx94eaPr" target="_blank" class="think__details__extra__description">Documento - Circuito GPS</a>
+                    <p class="think__details__extra__title">Señales y Local</p>
+                    <p>Al señalizar o avisar a los compradores que el carrito cuenta con un freno automático que luego de sobrepasar el límite de distancia asignada se activa, ofrecemos una mejor comunicación entre el usuario a la empresa donde realiza sus compras y de este modo evitamos eventos inesperados o desagradables.</p>
+                    <img src="../img/LOCAL.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=18_PPWSg3yIUUe1bQ3DZyWbAKHjqNbYcZ" target="_blank" class="think__details__extra__description">Documento - Señales y Local</a>
                 </div>
             </div>
             <div class="think__details">
@@ -114,15 +126,25 @@
                     <p>Esta es la herramienta de trabajo de muchas empresas dedicadas a la venta de productos, esta herramienta se ve involucrada en un problema con su mal uso por parte de algunos usuarios.</p>
                     <a href="https://drive.google.com/file/d/1TmrF-JHLkRz-yMFOVZ_WixS0xNnwRbQA/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Fabricación Digital</a>
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo</p>
-                    <a href="https://drive.google.com/file/d/1yOkK3zdU4yDNQWubY4xPMVwYE95bN0XV/view?usp=sharing" target="_blank" class="think__details__extra__description">Archivo - Fabricación Digital</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo</p>
-                    <a href="https://drive.google.com/file/d/1yOkK3zdU4yDNQWubY4xPMVwYE95bN0XV/view?usp=sharing" target="_blank" class="think__details__extra__description">Archivo - Fabricación Digital</a>
+                    <p class="think__details__extra__title">INVOLUCRADOS EN EL DESARROLLO DE LA PROPUESTA</p>
+                    <p class="think__details__extra__title">1.bastidor que une al eje:</p>
+                    <p>Permitira mantener sujeto el dispositivo de frenado al carrito de compras, brindando asi mas seguridad.</p>
+                    <p class="think__details__extra__title">2.giratorio superior</p>
+                    <p>Permitira que el carritos pueda reallizar sus funciones con total normalidad brindandole al cliente mas comodiad al momento de realizar compras.</p>
+                    <p class="think__details__extra__title">3.eje</p>
+                    <p>El eje basicamente mantiene unida la rueda del sistema de freno con el bastidor.</p>
+                    <p class="think__details__extra__title">4.nucleo</p>
+                    <p>Protege al eje de posibles golpes y mantiene firme la rueda.</p>
+                    <p class="think__details__extra__title">5. pieza cilindrica de diametro algo inferior que el de las ruedas</p>
+                    <p>Es la rueda la cual se encuntra hecho de un material sintetico y siendo asi suave ante posibles grietas o superficies malas por las que es carrtio tenga que pasar.</p>
+                    <p class="think__details__extra__title">6. guardapolvos quita hilos</p>
+                    <p>Mantine la posicion de la pieza cilindrica para que asi la tuerca de fijacion pueda cumplir su funcion sin dañar otros componentes al momento de asegurar.</p>
+                    <p class="think__details__extra__title">7. mecanismos que está formada la rueda</p>
+                    <p>Permitira que el carritos pueda reallizar sus funciones con total normalidad brindandole al cliente mas comodiad al momento de realizar compras.</p>
+                    <p class="think__details__extra__title">9. tuerca o fijación amovible similar</p>
+                    <p>Mantiene fija el guardapolvos evitando asi que se desprenda o se deslice.</p>
+                    <p class="think__details__extra__title">11. acanaladura</p>
+                    <p>Una superficie que que se encuentra cubierta por la pieza cilíndrica y a la vez mantiene estable esta, evitando que la pieza cilíndrica se deforme.</p>
                 </div>
             </div>
         </div>
