--- a/design-thinking/practica6.html
+++ b/design-thinking/practica6.html
@@ -56,31 +56,14 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/Funcional.jpg" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/oBobof9Q0Ps" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <img src="../img/IMG-20180415-WA0016.jpg" alt="">
             <div class="think__details__info">
-                    <p class="think__details__info__title">BOSQUEJO</p>
-                    <p class="think__details__info__cont">Aqui mostramos un bosquejo con algunas especificaciones de las ruedas de rcarritos de supermercado.</p>
-                    <img src="../img/BOSQUEJOrueda.jpg" alt="">
-                    <p class="think__details__extra__title">INVOLUCRADOS EN EL DESARROLLO DE LA PROPUESTA</p>
-                    <p class="think__details__extra__title">1.bastidor que une al eje:</p>
-                    <p>Permitira mantener sujeto el dispositivo de frenado al carrito de compras, brindando asi mas seguridad.</p>
-                    <p class="think__details__extra__title">2.giratorio superior</p>
-                    <p>Permitira que el carritos pueda reallizar sus funciones con total normalidad brindandole al cliente mas comodiad al momento de realizar compras.</p>
-                    <p class="think__details__extra__title">3.eje</p>
-                    <p>El eje basicamente mantiene unida la rueda del sistema de freno con el bastidor.</p>
-                    <p class="think__details__extra__title">4.nucleo</p>
-                    <p>Protege al eje de posibles golpes y mantiene firme la rueda.</p>
-                    <p class="think__details__extra__title">5. pieza cilindrica de diametro algo inferior que el de las ruedas</p>
-                    <p>Es la rueda la cual se encuntra hecho de un material sintetico y siendo asi suave ante posibles grietas o superficies malas por las que es carrtio tenga que pasar.</p>
-                    <p class="think__details__extra__title">6. guardapolvos quita hilos</p>
-                    <p>Mantine la posicion de la pieza cilindrica para que asi la tuerca de fijacion pueda cumplir su funcion sin dañar otros componentes al momento de asegurar.</p>
-                    <p class="think__details__extra__title">7. mecanismos que está formada la rueda</p>
-                    <p>Permitira que el carritos pueda reallizar sus funciones con total normalidad brindandole al cliente mas comodiad al momento de realizar compras.</p>
-                    <p class="think__details__extra__title">9. tuerca o fijación amovible similar</p>
-                    <p>Mantiene fija el guardapolvos evitando asi que se desprenda o se deslice.</p>
-                    <p class="think__details__extra__title">11. acanaladura</p>
-                    <p>Una superficie que que se encuentra cubierta por la pieza cilíndrica y a la vez mantiene estable esta, evitando que la pieza cilíndrica se deforme.</p>
+                    <p class="think__details__info__title">MEJORAS EN EL PRODUCTO</p>
+                    <p class="think__details__extra__title">Señales y Local</p>
+                    <p>Notamos que muchos de los usuarios no se percatan de que </p>
+                    <img src="../img/LOCAL.jpg" alt="">
+                    <a href="https://drive.google.com/open?id=18_PPWSg3yIUUe1bQ3DZyWbAKHjqNbYcZ" target="_blank" class="think__details__extra__description">Documento - Señales y Local</a>
                 </div>
             </div>
             <div class="think__details">
@@ -88,8 +71,15 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Esquema Funcional</p>
-                    <p class="think__details__info__cont">Aqui demostraremos el esquema funcional y las reacciones del usuario frente a nuestro producto de estas obtendremos opinicnes y criticas construcctivas que ayuden a la mejora de nuestro producto final.</p>
+                    <p class="think__details__info__title">INTERACCION DEL PRODUCTO CON EL USUARIO</p>
+                    <p class="think__details__info__cont">Aquí vamos a interactuar nuestro producto con el usuario, de manera que luego de la experiencia que tuvo el usuario nos brinde sus dudas, críticas constructivas, ideas nuevas o aspectos que resaltar sobre nuestro producto.
+                    De este modo gracias a esa información recopilada se podrá realizar mejoras en nuestro producto haciéndolo más aceptable y cómodo para su uso; en nuestro caso explicaremos brevemente la función de nuestro frenos para los carritos de compras y luego procederemos con la realización de preguntas que sean útiles para nuestra malla.</p>
+                    <p class="think__details__info__title">MALLA RECEPTORA</p>
+                    <p class="think__details__info__cont">Aquí recopilamos la información obtenida de las entrevistas y destacamos los puntos importantes que se mencionaron; así de este modo podremos saber que mejoras necesita nuestro producto.</p>
+                    <a href="https://drive.google.com/open?id=1-OgHtnDbQbdiU6_1aLhV25pyM59F70I2" target="_blank" class="think__details__extra__description">Malla Receptora</a>
+                    <p class="think__details__extra__title">Descomposición Funcional</p>
+                    <p>La descomposición funcional se refiere ampliamente al proceso de resolución de una relación funcional en sus partes constituyentes, de tal manera que la función original se puede reconstruir de las partes en función de la composición. </p>
+                    <img src="../img/Funcional.jpg" alt="">
                 </div>
                     </div>
             </div>
