--- a/design-thinking/practica6.html
+++ b/design-thinking/practica6.html
@@ -56,7 +56,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/oBobof9Q0Ps" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bJjBgzTkUMU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <img src="../img/IMG-20180415-WA0016.jpg" alt="">
             <div class="think__details__info">
                     <p class="think__details__info__title">MEJORAS EN EL PRODUCTO</p>
