--- a/proyecto-final/semana6.html
+++ b/proyecto-final/semana6.html
@@ -55,27 +55,29 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/final.jpg" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HSmkH4SbBMU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <img src="../img/SELED.png" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Título</p>
-                    <p class="think__details__info__cont">En Desarrollo.</p>
+                    <p class="think__details__info__title">INTERACCION DEL PRODUCTO CON EL USUARIO</p>
+                    <p class="think__details__info__cont">Nuestro producto interactúa con el usuaria que en este caso será más dirigido a los jóvenes; aquí notaremos los datos importantes que recolectaremos de cada entrevista.
+                    De este modo gracias a esa información recopilada se podrá realizar mejoras en nuestro producto haciéndolo más aceptable y cómodo para su uso.</p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p class="think__details__extra__description">En Desarrollo.</p>
-                    <a href="https://drive.google.com/file/d/1-xj35_0vcYonIHSFrk3vpeFg7BXDRSWB/view?usp=sharing" target="_blank">Documento - Informe Final</a>
+                    <p class="think__details__extra__title">Malla Receptora de La Lampara LED</p>
+                    <p class="think__details__extra__description">Hemos captado las principales aportes que el publico a quien va dirigido nos aporta.</p>
+                    <a href="https://drive.google.com/open?id=1JiwtTRf7xKQ-5haycNDlkL1x5UOHXZE8" target="_blank">Malla Receptora</a>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p class="think__details__extra__description">En Desarrollo.</p>
-                    <a href="https://drive.google.com/drive/folders/1yYU9NE8donOzS5ZVBZ4YDRG8j-ebKhJh?usp=sharing" target="_blank">APK's - Informe Final</a>
+                    <p class="think__details__extra__title">Presentacion Del Producto</p>
+                    <p class="think__details__extra__description">Realizamos la presentacion final de nuestro producto al publico en el cual detallamos todo el proceso de fabricacion y recopilamos informacion valiosa que pueda aportar en la mejora del producto.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HSmkH4SbBMU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
